; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_video.c_get_int.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_video.c_get_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [29 x i8] c"Invalid argument to %s in %s\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"get int\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.TYPE_3__*)* @get_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_int(i32* %0, i8* noalias %1, %struct.TYPE_3__* noalias %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %7, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %40

12:                                               ; preds = %3
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  switch i32 %15, label %37 [
    i32 0, label %16
    i32 128, label %24
    i32 129, label %30
  ]

16:                                               ; preds = %12
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @find_sub_source_by_name(i32* %17, i8* %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i32 1, i32 0
  store i32 %23, i32* %4, align 4
  br label %40

24:                                               ; preds = %12
  %25 = load i32*, i32** %5, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @var_GetInteger(i32* %25, i32 %28)
  store i32 %29, i32* %4, align 4
  br label %40

30:                                               ; preds = %12
  %31 = load i32*, i32** %5, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @var_GetFloat(i32* %31, i32 %34)
  %36 = call i32 @lroundf(i32 %35)
  store i32 %36, i32* %4, align 4
  br label %40

37:                                               ; preds = %12
  %38 = load i8*, i8** %6, align 8
  %39 = call i32 @libvlc_printerr(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i8* %38, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %40

40:                                               ; preds = %37, %30, %24, %16, %11
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @find_sub_source_by_name(i32*, i8*) #1

declare dso_local i32 @var_GetInteger(i32*, i32) #1

declare dso_local i32 @lroundf(i32) #1

declare dso_local i32 @var_GetFloat(i32*, i32) #1

declare dso_local i32 @libvlc_printerr(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
